syntax = "proto3";

package employeePackage;

message grpcEmployeeRequest{
	string id = 1;
}

message ServerStreamEmployeeResponse {
	grpcEmployee employee = 1;
}

message grpcEmployee {
	string id = 1;
	string firstName = 2;
	string lastName = 3;
	string gender = 4;
	string ethnicity = 5;
	string position = 6;
	string startDate = 7;
	string shiftPreference = 8;
	string branchName = 9;
	string region = 10;
	string country = 11;
	string phoneNumber = 12;
	string email = 13;
	int32 version = 14;
	string signInType = 15;
	string providerId = 16;
	string password = 17;
	string userRole = 18;
}

message AllGrpcEmployees {
	string serviceName = 1;
}

message CreateGrpcEmployeeInfo{
	int32 status = 1;
	string jwt = 2;
	grpcEmployee user = 3;
}

message grpcEmployeeUpdate{
	string id = 1;
	string name = 2;
	string userRole = 3;
	repeated string categories = 4;
	string password = 5;
	string providerId = 6;
}

service UserService {
	rpc GetAllEmployees(AllGrpcEmployees) returns (stream ServerStreamEmployeeResponse) {};
	rpc GetSingleEmployee(grpcEmployeeRequest) returns (grpcEmployee) {};
	rpc UpdateEmployee(grpcEmployeeUpdate) returns (grpcEmployee) {};
}
